Changes from jTDS 1.0.1
=======================

02/12/2005 - Alin Sinpalean
 o Corrected bug [1120442] Statement hangs in socket read after
   Statement.cancel().
 o Applied Mike's fix for bug [1120825] Can't open scrollable ResultSet with
   Sybase 11.9.
 o Applied Mike's fix to my fix to bug [1120442] Statement hangs in socket read 
   after Statement.cancel(). :o)

02/10/2005 - Alin Sinpalean
 o Improved test for bug [1116046] {fn } escape can't handle nested functions.

===============================================================================
02/09/2005 - jTDS 1.0.1 released
===============================================================================

Changes from jTDS 1.0
=======================

02/09/2005 - Alin Sinpalean
 o Corrected bug [1118956] statement.setMaxFieldSize() sends a statement every
   time. Max field size is now set at the same time and in the same way as row
   count.
 o Applied Mike's patch [1118912] Small enhancements. Extended DataTruncation
   support, better transaction isolation support for Sybase and a fixed NPE in
   Logger.

02/08/2005 - Alin Sinpalean
 o Synchronized JtdsStatement.close(); a race condition could occur between a
   pool implementation closing Statements after a timeout and finalize().

02/07/2005 - Alin Sinpalean
 o Added the explanation for the "Connection refused" error message to the FAQ.
 o Removed tests that were failing because of the fix for bug [1113709]
   Connecting via DataSource (the assumptions of these tests were incorrect, to
   start with).

02/05/2005 - Alin Sinpalean
 o Applied patch [117010] Instance parameter support for local named pipes,
   submitted by Matthias Germann.

02/04/2005 - Alin Sinpalean
 o Applied Mike's fix for bugs [1116113] (SSL fails to build or run under java
   1.3) and [1102505] (SSL Resume Failure). TLS resume is now disabled
   altogether until we find out what the actual cause is and work around it.